MOVE-4778 SR: Slå opp mottakers prefererte skriftspråk